# Feature-Flag-System

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  feature_flag_system_docs.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
Schema/: README.md  database-schema.md  debug-eval-request.schema.json  evaluation-result.schema.json  example-snapshot.json  flag-definition.schema.json  snapshot-response.schema.json
docs/: api.md  architecture.md  demo.md  glossary.md  report.md  roadmap.md  scope-mvp.md
docs/adr/: 0001-local-snapshot-local-evaluation.md  0002-polling-and-sse-behind-refresh-interface.md  0003-deterministic-percentage-bucketing.md  0004-django-orm-source-of-truth.md  0005-fail-safe-to-default.md  0006-core-has-zero-framework-imports.md
examples/minimal_consumer/: README.md  poll_and_eval.py
feature_flags_project/: asgi.py  settings.py  urls.py  wsgi.py
flags_client/: __init__.py
flags_core/: __init__.py  bucketing.py  context.py  errors.py  evaluator.py  models.py  rules.py  schema.py  serialization.py  snapshot.py
flags_django/: admin.py  api_urls.py  api_views.py  apps.py  converters.py  models.py  services.py  sse.py
flags_django/management/commands/: flagctl.py
flags_django/migrations/: 0001_initial.py
scripts/: bootstrap.ps1  bootstrap.sh  capture-demo.ps1  capture-demo.sh  verify.ps1  verify.sh
tests/: conftest.py
tests/core/: test_bucketing.py  test_context.py  test_decoupling.py  test_errors.py  test_evaluator.py  test_evaluator_extra.py  test_imports.py  test_models_core.py  test_public_api.py  test_rules.py  test_rules_edge.py  test_schema.py  test_schema_numeric.py  test_serialization.py  test_serialization_extra.py
tests/django/: test_admin.py  test_api.py  test_api_extra.py  test_cli.py  test_cli_extra.py  test_converters.py  test_converters_extra.py  test_e2e.py  test_models.py  test_models_extra.py  test_services.py  test_services_edge.py
