[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-flag-system"
version = "0.1.3"
description = "Django-backed feature flag MVP with a pure Python evaluation core"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["django", "feature-flags", "feature-toggles", "mvp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "Django>=5.2,<6",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-django>=4.10",
    "pytest-cov>=5",
]
dev = [
    "pytest>=8",
    "pytest-django>=4.10",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "python-dotenv>=1.0",
    "pip-audit>=2",
    "pip-tools>=7",
]

[project.urls]
Documentation = "https://github.com/YOUR_GITHUB_USERNAME/feature-flag-system/blob/main/docs/report.md"
Source = "https://github.com/YOUR_GITHUB_USERNAME/feature-flag-system"
Changelog = "https://github.com/YOUR_GITHUB_USERNAME/feature-flag-system/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["flags_core*", "flags_django*", "feature_flags_project*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "feature_flags_project.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = ["--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# The formatter owns code line length; E501 would only nag about comments/strings.
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
# Scoped to the pure core on purpose: it is framework-free and fully typed. The
# flags_django adapter layer is intentionally out of scope (typing it well would
# require django-stubs), so the MVP type-checks the part where it matters most.
files = ["flags_core"]
disallow_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["flags_core", "flags_django"]
omit = ["*/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 99
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
